// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem Component SideBarItem handles click on entry in main menu and handles click on submenu 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          data-testid="PARENT-TEST-ID"
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </a>
      </li>
      <ul
        class="submenu"
        style="width: 270px; left: 270px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <a
            class=""
            data-testid="CHILD-TEST-ID"
            href="/link/link1"
          >
            full url
            <div
              class="label"
            >
              LINK1
            </div>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class=""
            href="/link/link2"
          >
            full url
            <div
              class="label"
            >
              LINK2
            </div>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem handles click on entry in main menu and handles click on submenu 2`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar sidebarHidden"
      style="width: 270px; left: -270px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          data-testid="PARENT-TEST-ID"
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </a>
      </li>
      <ul
        class="submenu visible"
        style="width: 270px; left: 0px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <a
            class=""
            data-testid="CHILD-TEST-ID"
            href="/link/link1"
          >
            full url
            <div
              class="label"
            >
              LINK1
            </div>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class=""
            href="/link/link2"
          >
            full url
            <div
              class="label"
            >
              LINK2
            </div>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem handles click on entry in main menu and handles click on submenu 3`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar sidebarHidden"
      style="width: 270px; left: -270px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          data-testid="PARENT-TEST-ID"
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </a>
      </li>
      <ul
        class="submenu visible"
        style="width: 270px; left: 0px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <a
            class=""
            data-testid="CHILD-TEST-ID"
            href="/link/link1"
          >
            full url
            <div
              class="label"
            >
              LINK1
            </div>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class=""
            href="/link/link2"
          >
            full url
            <div
              class="label"
            >
              LINK2
            </div>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem renders 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 400px;"
  >
    <ul
      class="sidebar"
      style="width: 400px; left: 0px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </a>
      </li>
      <ul
        class="submenu"
        style="width: 400px; left: 400px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <a
            class=""
            href="/link"
            target="_blank"
          >
            full url
            <div
              class="label"
            >
              EXTERNAL
            </div>
            <i
              class="icon externalLink"
              icon="fal,external-link"
            />
          </a>
        </li>
        <li
          class="item disabled"
        >
          <a
            class="disabled"
            href="/link"
          >
            full url
            <div
              class="label"
            >
              DISABLED
            </div>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class=""
            href="/link"
          >
            full url
            <div
              class="label"
            >
              NORMAL
            </div>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem renders unfixed 1`] = `
<div>
  <nav
    class="container unfixed"
    style="height: 600px; width: 400px;"
  >
    <ul
      class="sidebar"
      style="width: 400px; left: 0px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </a>
      </li>
      <ul
        class="submenu unfixed"
        style="width: 400px; left: 400px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <a
            class=""
            href="/link"
            target="_blank"
          >
            full url
            <div
              class="label"
            >
              EXTERNAL
            </div>
            <i
              class="icon externalLink"
              icon="fal,external-link"
            />
          </a>
        </li>
        <li
          class="item disabled"
        >
          <a
            class="disabled"
            href="/link"
          >
            full url
            <div
              class="label"
            >
              DISABLED
            </div>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class=""
            href="/link"
          >
            full url
            <div
              class="label"
            >
              NORMAL
            </div>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem renders with only one subitem visible 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem renders with url as Location 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <li
        class="item"
      >
        <a
          class=""
          href="/link"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </a>
      </li>
      <ul
        class="submenu"
        style="width: 270px; left: 270px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <a
            class=""
            href="PATHNAME"
          >
            full url
            <div
              class="label"
            >
              LINK
            </div>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class=""
            href="/link2"
          >
            full url
            <div
              class="label"
            >
              Link2
            </div>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component SideBarItem should generate an error when not in a SideBar component 1`] = `
<div>
  <li
    class="item"
  >
    <a
      class=""
      href="/link"
    >
      partial url
      <div
        class="label"
      >
        LABEL
      </div>
    </a>
  </li>
</div>
`;

exports[`SideBarItem Component SideBarItem should generate an error when not in a SideBar component 2`] = `<div />`;
